@@ -1,6 +1,5 @@
-
 /*
-  engraver-group-engraver.hh -- declare Engraver_group_engraver
+  engraver-group-engraver.hh -- declare Engraver_group
 
   source file of the GNU LilyPond music typesetter
 
@@ -13,14 +12,14 @@
 #include "engraver.hh"
 #include "translator-group.hh"
 
-class Engraver_group_engraver : public virtual Translator_group
+class Engraver_group : public virtual Translator_group
 {
 protected:
   Array<Grob_info> announce_infos_;
   SCM acknowledge_hash_table_;
 public:
-  VIRTUAL_COPY_CONSTRUCTOR (Translator_group, Engraver_group_engraver);
-  Engraver_group_engraver ();
+  VIRTUAL_COPY_CONSTRUCTOR (Translator_group, Engraver_group);
+  Engraver_group ();
   virtual void derived_mark () const;
   void do_announces ();
   virtual void announce_grob (Grob_info);
