@@ -46,7 +46,7 @@ class Context_def;
 class Context_specced_music;
 class Engraver;
 class Engraver;
-class Engraver_group_engraver;
+class Engraver_group;
 class Event;
 class Event_chord;
 class Event_chord_iterator;
@@ -124,7 +124,7 @@ class Paper_score;
 class Paper_system;
 class Performance;
 class Performer;
-class Performer_group_performer;
+class Performer_group;
 class Piano_bar_engraver;
 class Pitch;
 class Pitch_squash_engraver;
